--- a/dynamodb_metrics_lambda/docker-compose.yml
+++ b/dynamodb_metrics_lambda/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '2'
 services:
+  run_shell_dynamodb_metrics_lambda:
+    build:
+      context: .
+    image: run-shell-dynamodb-metrics-lambda
+    command: /tmp/src/run_shell.sh
+    environment:
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
   deploy_dynamodb_metrics_lambda:
     build:
       context: .
