Fixed cloudwatch typo

--- a/dynamodb_metrics_lambda/src/serverless.yml
+++ b/dynamodb_metrics_lambda/src/serverless.yml
@@ -16,7 +16,7 @@ provider:
         - autoscaling:Describe*
         - application-autoscaling:Describe*
         - cloudwatch:GetMetricData
-        - cloudwatch:PuttMetricData
+        - cloudwatch:PutMetricData
       Resource: "*"
 
 
